# polymarket-autopilot

./: .dockerignore  .env.example  .env.live.example  .gitignore  DASHBOARD-SUMMARY.md  DASHBOARD.md  Dockerfile  LIVE_DEPLOYMENT_GUIDE.md  LIVE_TRADING_GUIDE.md  MULTI_AGENCY_SYSTEM.md  OPTIMIZATION_SUMMARY.md  READINESS.md  README.md  RISK_MANAGEMENT_SUMMARY.md  agency-monitor.py  alpha-aggregator.py  dashboard.py  dashboard.py.backup  demo_risk_management.py  intelligence-pipeline-v2.py  pyproject.toml  requirements.txt  trading-orchestrator.py
.github/: DEPLOYMENT-CHECKLIST.md
.github/workflows/: ci-enhanced.yml  ci.yml
.streamlit/: config.toml
demo/: sample_snapshots.csv  sample_trades.json
scripts/: auto_trade.sh  collect_snapshots.py  demo_scan.py  live_quickstart.py  monitor_live_trading.py  run_extended_paper_trading.sh
src/: httpx.py
src/dotenv/: __init__.py
src/polymarket_autopilot/: __init__.py  __main__.py  api.py  backtest.py  cli.py  db.py  demo.py  dotenv_compat.py  live_trading.py  portfolio.py  report_generator.py  risk.py  risk_management.py  strategies.py  strategies_optimized.py
tests/: test_api.py  test_backtest.py  test_dashboard.py  test_db.py  test_demo.py  test_portfolio.py  test_regressions.py  test_risk.py  test_risk_management.py  test_strategies.py
